@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2013-11-06 r64163) -- "Unsuffered Consequences"
+R Under development (unstable) (2013-11-20 r64271) -- "Unsuffered Consequences"
 Copyright (C) 2013 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -2142,7 +2142,7 @@ character(0)
 +               is.numeric(chroma), chroma >= 0, (nch <- length(chroma)) >= 1)
 +     if(is.unsorted(hues)) hues <- sort(hues)
 +     if(nch > 1) {
-+         op <- par(mfrow= n2mfrow(nch), mar = c(0,0,0,0))
++         op <- par(mfrow= n2mfrow(nch), mar = c(0,0,0,0), xpd = TRUE)
 +         on.exit(par(op))
 +     }
 +     for(i.c in 1:nch) {
